<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android Observer</string>
    <string name="action_settings">About</string>
    <string name="cpu_info"><u>Processor</u></string>

    <string name="ram_info">RAM</string>
    <string name="internal_storage_info">Internal Storage</string>
    <string name="clear_memory">Release RAM</string>
    <string name="delete_cache">Delete Cache</string>
    <string name="sensors_info"><u>Sensors</u></string>
    <string name="camera_info"><u>Camera</u></string>
    <string name="general_info"><u>System</u></string>
    <string name="display_info"><u>Display</u></string>

    <string name="memory_info_text">Memory Info</string>
    <string name="hardware_info_text">Hardware Info</string>
    <string name="processes_info_text">Running Processes</string>
    <string name="apps_info_text">Installed Apps</string>
    <string name="about_app">About this app</string>
    <string name="cache_deleted_toast">Cache deleted!</string>
    <string name="memory_released_toast">Memory released!</string>

</resources>
